Don't know if I understood everything, but I finished everything to the best of my ability.

--- a/html-css-1/index.html
+++ b/html-css-1/index.html
@@ -1,48 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+</html><!DOCTYPE html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Skills Check HTML/CSS</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
-    <link rel="stylesheet" type="text/css" href="reset.css"/> 
+    <meta charset="UTF-8"> 
+    <title>Sean Kelly Scott's SkillsCheck Website Clone</title>
+    <link rel="stylesheet" href="reset.css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <div class = "top">
-        <div class = "top-left">
-            <span>COMPANY</span>
+    <nav>
+        <h1 id="company-logo">COMPANY</h1>
+        <div>
+            <h5 id="home-link">Home</h5>
+            <h5 id="about-link">About</h5>
+            <h5 id="contact-link">Contact</h5>
         </div>
-        <div class = "top-right">
-            <span>Home</span>
-            <span>About</span>
-            <span>Contact</span>
-        </div>
+    </nav>
+    <header>
+        <h2>THE MORE YOU KNOW</h2>
+    </header>
+    <main>
+        <div class="green-square"></div>
+        <div class="green-square"></div>
+        <div class="green-square"></div>
+        <div class="orange-rectangle"></div>
+        <div class="orange-rectangle"></div>
+        <p id="random-paragraph">Game-plan social currency shotgun approach commitment to the cause rock Star/Ninja we've got to manage that low hanging fruit. Viral engagement. Cross-pollination nail jelly to the hothouse wall, so streamline, or future-proof face time. Productize time vampire drink the Kool-aid, so in this space nor baseline and where do we stand on the latest client ask, and execute . You better eat a reality sandwich before you walk back in that boardroom.</p>
+        <img id="JRT-Painting" src="http://cdn2.bigcommerce.com/server4600/y8hjpwm/products/297/images/403/Jordan_RiverTemple_LCW_24x30_18x24__91509.1362505884.1280.1280.jpg?c=2, http://www.winborg.com/productimage.php?product_id=297&current_image=0" alt="Painting of Jordan River Temple"/>
 
-    </div>
-    <div class = "black">
-        <p>THE MORE YOU KNOW</p>
-
-    </div>
-    <div class = "white">
-        <div class = "white-top">
-            <div class = "three-boxes"></div>
-            <div class = "three-boxes"></div>
-            <div class = "three-boxes"></div>
-        </div>
-        <div class = "white-middle">
-            <div class = "two-boxes"></div>
-            <div class = "two-boxes"></div>
-        </div>
-        <div class = "white-bottom">
-            <p class = "text-box"> Game-plan social currency shotgun approach commitment to the cause rock Star/Ninja we've got to manage that low hanging fruit. Viral engagement. Cross-pollination nail jelly to the hothouse wall, so streamline, or future-proof face time. Productize time vampire drink the Kool-aid, so in this space nor baseline and where do we stand on the latest client ask, and execute . You better eat a reality sandwich before you walk back in that boardroom. </p>
-            <div class = "image"></div>
-        </div>
-
-    </div>
-    <div class = "bottom">
+    </main>
+    <footer>
         
-    </div>
-
+    </footer>
 </body>
-</html>
